# LightBringer

./: .gitignore  CMakeLists.txt  README.md  TODO.md  Windows.bat  gmon.out  imgui.ini  makefile  profile.txt  profile2.txt
.cache/clangd/index/: Actor.h.325363625306CA1B.idx  Actor.h.C8D2FC13A03D5369.idx  Camera.cpp.CD4442400D44FBC7.idx  Camera.h.611053F5A02CDEAF.idx  Camera.h.FD6EDCE70D51E0EC.idx  Common.h.CE48616156B13A86.idx  Common.h.D1E04A6727199FF0.idx  FrameBuffer.cpp.5CCDDBF728AD7E65.idx  FrameBuffer.h.76022344C5CF1364.idx  FrameBuffer.h.C6E385255A81A4CB.idx  GouraudShader.h.AC29943B49F98CDF.idx  Light.h.865BF4F4607EB1BA.idx  Light.h.DD8B097D8AD03E92.idx  Matrix.cpp.AB5AAAE22AB50E9B.idx  Matrix.h.4D071D024A7035FF.idx  Matrix.h.BD955034B6B6C4D8.idx  Mesh.cpp.D37B7FF4F37C3463.idx  Mesh.h.2B5B55F99EC95C86.idx  Mesh.h.CA62B7DD5C40B00D.idx  ModelLoader.cpp.47F8E6EA612BD1C2.idx  ModelLoader.h.AC00A93AFACFFF3C.idx  ParallelLight.h.35FC9CA3A1BC5224.idx  ParallelLight.h.E11F7CBA2C584DE2.idx  PhongShader.h.5113FFCC32CD8504.idx  PointLight.h.848C8F77522C20FC.idx  PointLight.h.A0D12467C968A1B7.idx  Render.cpp.EC4E2638916A73B2.idx  Render.h.A3B52F53E3EB6ED9.idx  Render.h.DD6D119D1CD78CC1.idx  Shader.h.184B8A97D343B2E7.idx  Shader.h.D7850F71D249A74D.idx  SimpleShader.cpp.D5D76C550BB0C6B4.idx  SimpleShader.h.C7F06E48BF353B89.idx  SimpleShader.h.D6F7003505D20E44.idx  Texture.cpp.58E811C49146DD13.idx  Texture.h.2F8E9BD3CB1A9D27.idx  Texture.h.AB65FE7EE390934A.idx  Transformer.cpp.8418FAD80D21AA7B.idx  Transformer.h.20A6CA570EE8D06C.idx  Transformer.h.A3AD76F6C18B304C.idx  (+9 more)
Engine/: Actor.h  CMakeLists.txt  Camera.cpp  Camera.h  Clipper.cpp  Clipper.h  Common.h  CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  GouraudShader.cpp  GouraudShader.h  GroudShader.cpp  GroudShader.h  Light.h  Mesh.cpp  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h  ParallelLight.h  PhongShader.cpp  PhongShader.h  PointLight.h  Predefined.h.in  Renderer.cpp  Renderer.h  SceneLoader.cpp  SceneLoader.h  Serializable.h  Shader.cpp  Shader.h  SkyBoxShader.cpp  SkyBoxShader.h  Statistic.h  Texture.cpp  Texture.h  Transform.h  Transformer.cpp  (+8 more)
Engine/assets/Scene/: sample.json  tinyrenderer.json
assets/Scene/: sample.json
glm/doc/: man.doxy
glm/doc/api/: a00047_source.html
glm/glm/gtc/: type_ptr.hpp
include/Core/: Actor.h  Camera.h  Light.h  ModelLoader.h  ParallelLight.h  Render.h  Shader.h  SimpleShader.h  Texture.h  Transformer.h
include/Core/Light/: Light.h  ParallelLight.h  PointLight.h
include/Core/Pipeline/: Clipper.cpp  Clipper.h  FrameBuffer.h  Render.h  Transformer.h
include/Core/Scene/: Actor.h  Camera.h
include/Core/Shader/: GouraudShader.h  PhongShader.h  Shader.h  SimpleShader.h  SkyBoxShader.cpp
include/Core/Texture/: Checkboard.h  CubeMap.cpp  CubeMap.h  NoiseMap.h  Texture.h
include/Image/: stb_image.h
include/glad/: glad.h
include/math/: Common.h  Matrix.h  Mesh.h  Triangle.h  Vertex.h
lib/: glfw3.lib
src/: Camera.cpp  Checkboard.cpp  FrameBuffer.cpp  GouraudShader.cpp  Matrix.cpp  Mesh.cpp  ModelLoader.cpp  NoiseMap.cpp  PhongShader.cpp  Render.cpp  Shader.cpp  SimpleShader.cpp  Texture.cpp  Transformer.cpp  Triangle.cpp  Vertex.cpp  main.cpp
